# zirodelta-protocol

./: .eslintignore  .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
.github/: README.md
.github/workflows/: deploy.yml  docs.yml  evm-ci.yml  integration-test.yml  monitoring.yml  performance-test.yml  quality-gates.yml  release.yml  security-scan.yml  solana-ci.yml
docs/: artifact-access-guide.md  economic-model.docx  economic-model.md  github-actions-setup.md  github-pages-setup.md  releases-and-packages-setup.md  security-audit-report.md
docs/contracts/: ZiroDeltaAMM.md  ZiroDeltaEmergency.md  ZiroDeltaEpochManager.md  ZiroDeltaGovernance.md  ZiroDeltaMinting.md  ZiroDeltaOracle.md  ZiroDeltaTimelock.md
evm/: .solhint.json  hardhat.config.js  package-lock.json  package.json
evm/contracts/: IMintableBurnableERC20.sol  IMultiOracle.sol  MockERC20.sol  MockMultiOracle.sol  MockOracle.sol  MockVotes.sol  ZiroDeltaAMM.sol  ZiroDeltaGovernance.sol  ZiroDeltaMinting.sol  ZiroDeltaOracle.sol  ZiroDeltaTimelock.sol
evm/deploy/: deploy.js
scripts/: check-artifacts.js  create-release.sh
src/: App.tsx  index.css
svm/: Anchor.toml  README.md  package.json  tsconfig.json
svm/programs/mock_oracle/: Cargo.toml
svm/programs/mock_oracle/src/: lib.rs
svm/programs/ziro_delta_amm/: Cargo.toml
svm/programs/ziro_delta_amm/src/: lib.rs
svm/programs/ziro_delta_amm/tests/: amm.ts
svm/programs/ziro_delta_emergency/: Cargo.toml
svm/programs/ziro_delta_emergency/src/: lib.rs
svm/programs/ziro_delta_emergency/tests/: emergency.ts
(+76 files in other folders)
